--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -62,7 +62,7 @@
 
 .nav-link {
 	color: #C3DFE4;
-	font-weight: 300;
+	/* font-weight: 300; */
 	font-size: 1.3em;
 	transition: color 0.5s ease;
 	letter-spacing: 2px;
@@ -70,7 +70,7 @@
 
 .navbar-dark .navbar-brand {
 	color: #C3DFE4;
-	font-weight: 300;
+	/* font-weight: 300; */
 	font-size: 2em;
 	transition: color 0.5s ease;
 }
