--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#loginModal" data-toggle="modal" data-target="#loginModal">Login</a>
+                    <a class="nav-link" href="#loginModal" data-toggle="modal" data-target="#loginModal">Login <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/register">Register</a>
+                    <a class="nav-link" href="/register">Register <i class="fas fa-user-plus"></i></a>
                 </li>
             </ul>
         </div>
@@ -18,10 +18,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/account">Welcome, <%= user %>!</a>
+                    <a class="nav-link" href="/account">Welcome, <%= user %>! <i class="fas fa-user"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Log Out</a>
+                    <a class="nav-link" href="/logout">Log Out <i class="fas fa-sign-out-alt"></i></a>
                 </li>
             </ul>
         </div>
