--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
         </div>
         <div id="requirement-search">
             <h1 class="reqful-h">Requirement Search</h1>
-            <p class="reqful-p">Check up to four boxes below in order to find the optimal classes to fulfill your requirements.</p>
+            <p class="reqful-p">Check one or more checkbox below to find a class that fulfills at least one desired requirement.</p>
             <form id="rsearch" method="get" action="/">
                 <div class="mid-container">
                     <div class="req-col">
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="search-results">
-
+            
         </div>
     </div>
     <a href="#" class="back-to-top">
