--- a/public/css/index.css
+++ b/public/css/index.css
@@ -110,13 +110,11 @@ p {
 
 .confirmation-btns {
     height: auto;
-    margin-bottom: 1.2em;
     text-align: center;
 }
 
 #rsearch {
     font-size: .8em;
-    margin-bottom: 1em;
 }
 
 h4 {
@@ -161,6 +159,110 @@ label {
 
 .cb {
     margin-right: 1em;
+}
+
+.search-results {
+    margin-top: 2em;
+}
+
+.search-results table {
+    font-size: 1.3em;
+}
+
+.search-results table a {
+    color: #1768AC;
+}
+
+.search-results-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5em;
+}
+
+.personalize-switch, .results-count {
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+}
+
+.results-count {
+    flex-grow: 1;
+}
+
+.personalize-switch .switch {
+    margin-left: 0.3em;
+}
+
+.search-results-header h2 {
+    margin-right: 0.5em;
+}
+
+.sort-dropdown .btn {
+    font-size: 1.1em;
+    margin-left: 1em;
+}
+
+.search-results-header label {
+    margin: 0;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #d3d3d3;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #1768AC;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #1768AC;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 /* media queries */
