--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="confirmation-btns">
-                    <input class="btn" type="submit" value="Submit" id="top-btn">
+                    <input class="btn" type="submit" value="Submit">
                     <input class="btn" type="reset" value="Clear">
                 </div>
             </form>
