--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -34,7 +34,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Log In</h5>
+                    <h5 class="modal-title">Login</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -43,10 +43,10 @@
                     <form id="login" method="post" action="/login" class="navform">
                         <input class="smooth-input" type="text"  name="username" placeholder="Username" required><br>
                         <input class="smooth-input" type="password" name="password" placeholder="Password" required><br>
-                        <button type="submit" class="btn">Log In</button>
+                        <button type="submit" class="btn">Login <i class="fas fa-sign-in-alt"></i></button>
                     </form>
                 </div>
-                <a class="reg-link" href="/register">No account? Register here!</a>
+                <a class="reg-link" href="/register">No account? Register here! <i class="fas fa-user-plus"></i></a>
             </div>
         </div>
     </div>
