--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -192,6 +192,8 @@
             <div id="search-results" class="search-results-header">
                 <h2>Search Results</h2>
                 <span class="results-count">23 results</span>
+                <%
+                if (user) { %>
                 <span class="personalize-switch">
                     <span data-toggle="tooltip" data-placement="top" title="Filter results by completed prerequisites and untaken courses.">Personalize Results</span>
                     <label class="switch">
@@ -199,6 +201,9 @@
                         <span class="slider round"></span>
                     </label>
                 </span>
+                <%
+                }
+                %>
                 <span class="sort-dropdown">
                     <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sort By:
