--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <button type="submit" class="btn">Register</button>
+                <button type="submit" class="reg-btn btn">Register</button>
             </div>
         </form>
     </div>
