--- a/public/css/index.css
+++ b/public/css/index.css
@@ -151,7 +151,7 @@ label {
 }
 
 .reqful-p {
-    font-weight: 700;
+    font-weight: 400;
     font-size: 1.1em;
 }
 
@@ -263,8 +263,13 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
+.search-result-wrapper {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
 /* media queries */
-@media (max-width: 1113px) {
+@media (max-width: 1293px) {
     .mid-container {
         flex-direction: column;
     }
@@ -286,6 +291,10 @@ input:checked + .slider:before {
     .search-select {
         width: 70%;
     }
+    .search-result-wrapper {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
 }
 
 @media (max-width: 425px) {
@@ -293,4 +302,21 @@ input:checked + .slider:before {
         padding-right: 10%;
         padding-left: 10%;
     }
+}
+
+
+.dropdown-item {
+    text-align: right;
+}
+
+.reqBoxes {
+    margin-bottom: 1em;
+}
+
+
+
+
+
+.req-search-header {
+    margin-bottom: 3em;
 }
